feat: article list basic ui and action done
